--- a/src/.env.example
+++ b/src/.env.example
@@ -13,6 +13,8 @@ DB_DATABASE=laravel-boilerplate
 DB_USERNAME=root
 DB_PASSWORD=root
 
+WEBSOCKET_URL=http://localhost:8080
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
